--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "drum-machine",
   "version": "0.1.0",
   "private": true,
+  "author": "Quan Tran",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
